seaqt/QtGui/gen_qtextlayout.nim


proc fcQTextInlineObject_new(): ptr cQTextInlineObject {.importc: "QTextInlineObject_new".}
proc fcQTextInlineObject_isValid(self: pointer, ): bool {.importc: "QTextInlineObject_isValid".}
proc fcQTextInlineObject_rect(self: pointer, ): pointer {.importc: "QTextInlineObject_rect".}
proc fcQTextInlineObject_width(self: pointer, ): float64 {.importc: "QTextInlineObject_width".}
proc fcQTextInlineObject_ascent(self: pointer, ): float64 {.importc: "QTextInlineObject_ascent".}
proc fcQTextInlineObject_descent(self: pointer, ): float64 {.importc: "QTextInlineObject_descent".}
proc fcQTextInlineObject_height(self: pointer, ): float64 {.importc: "QTextInlineObject_height".}
proc fcQTextInlineObject_textDirection(self: pointer, ): cint {.importc: "QTextInlineObject_textDirection".}
proc fcQTextInlineObject_setWidth(self: pointer, w: float64): void {.importc: "QTextInlineObject_setWidth".}
proc fcQTextInlineObject_setAscent(self: pointer, a: float64): void {.importc: "QTextInlineObject_setAscent".}
proc fcQTextInlineObject_setDescent(self: pointer, d: float64): void {.importc: "QTextInlineObject_setDescent".}
proc fcQTextInlineObject_textPosition(self: pointer, ): cint {.importc: "QTextInlineObject_textPosition".}
proc fcQTextInlineObject_formatIndex(self: pointer, ): cint {.importc: "QTextInlineObject_formatIndex".}
proc fcQTextInlineObject_format(self: pointer, ): pointer {.importc: "QTextInlineObject_format".}
proc fcQTextInlineObject_delete(self: pointer) {.importc: "QTextInlineObject_delete".}
proc fcQTextLayout_new(): ptr cQTextLayout {.importc: "QTextLayout_new".}
proc fcQTextLayout_new2(text: struct_miqt_string): ptr cQTextLayout {.importc: "QTextLayout_new2".}
proc fcQTextLayout_new3(text: struct_miqt_string, font: pointer): ptr cQTextLayout {.importc: "QTextLayout_new3".}
proc fcQTextLayout_new4(b: pointer): ptr cQTextLayout {.importc: "QTextLayout_new4".}
proc fcQTextLayout_new5(text: struct_miqt_string, font: pointer, paintdevice: pointer): ptr cQTextLayout {.importc: "QTextLayout_new5".}
proc fcQTextLayout_setFont(self: pointer, f: pointer): void {.importc: "QTextLayout_setFont".}
proc fcQTextLayout_font(self: pointer, ): pointer {.importc: "QTextLayout_font".}
proc fcQTextLayout_setRawFont(self: pointer, rawFont: pointer): void {.importc: "QTextLayout_setRawFont".}
proc fcQTextLayout_setText(self: pointer, string: struct_miqt_string): void {.importc: "QTextLayout_setText".}
proc fcQTextLayout_text(self: pointer, ): struct_miqt_string {.importc: "QTextLayout_text".}
proc fcQTextLayout_setTextOption(self: pointer, option: pointer): void {.importc: "QTextLayout_setTextOption".}
proc fcQTextLayout_textOption(self: pointer, ): pointer {.importc: "QTextLayout_textOption".}
proc fcQTextLayout_setPreeditArea(self: pointer, position: cint, text: struct_miqt_string): void {.importc: "QTextLayout_setPreeditArea".}
proc fcQTextLayout_preeditAreaPosition(self: pointer, ): cint {.importc: "QTextLayout_preeditAreaPosition".}
proc fcQTextLayout_preeditAreaText(self: pointer, ): struct_miqt_string {.importc: "QTextLayout_preeditAreaText".}
proc fcQTextLayout_setAdditionalFormats(self: pointer, overrides: struct_miqt_array): void {.importc: "QTextLayout_setAdditionalFormats".}
proc fcQTextLayout_additionalFormats(self: pointer, ): struct_miqt_array {.importc: "QTextLayout_additionalFormats".}
proc fcQTextLayout_clearAdditionalFormats(self: pointer, ): void {.importc: "QTextLayout_clearAdditionalFormats".}
proc fcQTextLayout_setFormats(self: pointer, overrides: struct_miqt_array): void {.importc: "QTextLayout_setFormats".}
proc fcQTextLayout_formats(self: pointer, ): struct_miqt_array {.importc: "QTextLayout_formats".}
proc fcQTextLayout_clearFormats(self: pointer, ): void {.importc: "QTextLayout_clearFormats".}
proc fcQTextLayout_setCacheEnabled(self: pointer, enable: bool): void {.importc: "QTextLayout_setCacheEnabled".}
proc fcQTextLayout_cacheEnabled(self: pointer, ): bool {.importc: "QTextLayout_cacheEnabled".}
proc fcQTextLayout_setCursorMoveStyle(self: pointer, style: cint): void {.importc: "QTextLayout_setCursorMoveStyle".}
proc fcQTextLayout_cursorMoveStyle(self: pointer, ): cint {.importc: "QTextLayout_cursorMoveStyle".}
proc fcQTextLayout_beginLayout(self: pointer, ): void {.importc: "QTextLayout_beginLayout".}
proc fcQTextLayout_endLayout(self: pointer, ): void {.importc: "QTextLayout_endLayout".}
proc fcQTextLayout_clearLayout(self: pointer, ): void {.importc: "QTextLayout_clearLayout".}
proc fcQTextLayout_createLine(self: pointer, ): pointer {.importc: "QTextLayout_createLine".}
proc fcQTextLayout_lineCount(self: pointer, ): cint {.importc: "QTextLayout_lineCount".}
proc fcQTextLayout_lineAt(self: pointer, i: cint): pointer {.importc: "QTextLayout_lineAt".}
proc fcQTextLayout_lineForTextPosition(self: pointer, pos: cint): pointer {.importc: "QTextLayout_lineForTextPosition".}
proc fcQTextLayout_isValidCursorPosition(self: pointer, pos: cint): bool {.importc: "QTextLayout_isValidCursorPosition".}
proc fcQTextLayout_nextCursorPosition(self: pointer, oldPos: cint): cint {.importc: "QTextLayout_nextCursorPosition".}
proc fcQTextLayout_previousCursorPosition(self: pointer, oldPos: cint): cint {.importc: "QTextLayout_previousCursorPosition".}
proc fcQTextLayout_leftCursorPosition(self: pointer, oldPos: cint): cint {.importc: "QTextLayout_leftCursorPosition".}
proc fcQTextLayout_rightCursorPosition(self: pointer, oldPos: cint): cint {.importc: "QTextLayout_rightCursorPosition".}
proc fcQTextLayout_draw(self: pointer, p: pointer, pos: pointer): void {.importc: "QTextLayout_draw".}
proc fcQTextLayout_drawCursor(self: pointer, p: pointer, pos: pointer, cursorPosition: cint): void {.importc: "QTextLayout_drawCursor".}
proc fcQTextLayout_drawCursor2(self: pointer, p: pointer, pos: pointer, cursorPosition: cint, width: cint): void {.importc: "QTextLayout_drawCursor2".}
proc fcQTextLayout_position(self: pointer, ): pointer {.importc: "QTextLayout_position".}
proc fcQTextLayout_setPosition(self: pointer, p: pointer): void {.importc: "QTextLayout_setPosition".}
proc fcQTextLayout_boundingRect(self: pointer, ): pointer {.importc: "QTextLayout_boundingRect".}
proc fcQTextLayout_minimumWidth(self: pointer, ): float64 {.importc: "QTextLayout_minimumWidth".}
proc fcQTextLayout_maximumWidth(self: pointer, ): float64 {.importc: "QTextLayout_maximumWidth".}
proc fcQTextLayout_glyphRuns(self: pointer, ): struct_miqt_array {.importc: "QTextLayout_glyphRuns".}
proc fcQTextLayout_setFlags(self: pointer, flags: cint): void {.importc: "QTextLayout_setFlags".}
proc fcQTextLayout_nextCursorPosition2(self: pointer, oldPos: cint, mode: cint): cint {.importc: "QTextLayout_nextCursorPosition2".}
proc fcQTextLayout_previousCursorPosition2(self: pointer, oldPos: cint, mode: cint): cint {.importc: "QTextLayout_previousCursorPosition2".}
proc fcQTextLayout_draw3(self: pointer, p: pointer, pos: pointer, selections: struct_miqt_array): void {.importc: "QTextLayout_draw3".}
proc fcQTextLayout_draw4(self: pointer, p: pointer, pos: pointer, selections: struct_miqt_array, clip: pointer): void {.importc: "QTextLayout_draw4".}
proc fcQTextLayout_glyphRuns1(self: pointer, fromVal: cint): struct_miqt_array {.importc: "QTextLayout_glyphRuns1".}
proc fcQTextLayout_glyphRuns2(self: pointer, fromVal: cint, length: cint): struct_miqt_array {.importc: "QTextLayout_glyphRuns2".}
proc fcQTextLayout_delete(self: pointer) {.importc: "QTextLayout_delete".}
proc fcQTextLine_new(): ptr cQTextLine {.importc: "QTextLine_new".}
proc fcQTextLine_isValid(self: pointer, ): bool {.importc: "QTextLine_isValid".}
proc fcQTextLine_rect(self: pointer, ): pointer {.importc: "QTextLine_rect".}
proc fcQTextLine_x(self: pointer, ): float64 {.importc: "QTextLine_x".}
proc fcQTextLine_y(self: pointer, ): float64 {.importc: "QTextLine_y".}
proc fcQTextLine_width(self: pointer, ): float64 {.importc: "QTextLine_width".}
proc fcQTextLine_ascent(self: pointer, ): float64 {.importc: "QTextLine_ascent".}
proc fcQTextLine_descent(self: pointer, ): float64 {.importc: "QTextLine_descent".}
proc fcQTextLine_height(self: pointer, ): float64 {.importc: "QTextLine_height".}
proc fcQTextLine_leading(self: pointer, ): float64 {.importc: "QTextLine_leading".}
proc fcQTextLine_setLeadingIncluded(self: pointer, included: bool): void {.importc: "QTextLine_setLeadingIncluded".}
proc fcQTextLine_leadingIncluded(self: pointer, ): bool {.importc: "QTextLine_leadingIncluded".}
proc fcQTextLine_naturalTextWidth(self: pointer, ): float64 {.importc: "QTextLine_naturalTextWidth".}
proc fcQTextLine_horizontalAdvance(self: pointer, ): float64 {.importc: "QTextLine_horizontalAdvance".}
proc fcQTextLine_naturalTextRect(self: pointer, ): pointer {.importc: "QTextLine_naturalTextRect".}
proc fcQTextLine_cursorToX(self: pointer, cursorPos: ptr cint): float64 {.importc: "QTextLine_cursorToX".}
proc fcQTextLine_cursorToXWithCursorPos(self: pointer, cursorPos: cint): float64 {.importc: "QTextLine_cursorToXWithCursorPos".}
proc fcQTextLine_xToCursor(self: pointer, x: float64): cint {.importc: "QTextLine_xToCursor".}
proc fcQTextLine_setLineWidth(self: pointer, width: float64): void {.importc: "QTextLine_setLineWidth".}
proc fcQTextLine_setNumColumns(self: pointer, columns: cint): void {.importc: "QTextLine_setNumColumns".}
proc fcQTextLine_setNumColumns2(self: pointer, columns: cint, alignmentWidth: float64): void {.importc: "QTextLine_setNumColumns2".}
proc fcQTextLine_setPosition(self: pointer, pos: pointer): void {.importc: "QTextLine_setPosition".}
proc fcQTextLine_position(self: pointer, ): pointer {.importc: "QTextLine_position".}
proc fcQTextLine_textStart(self: pointer, ): cint {.importc: "QTextLine_textStart".}
proc fcQTextLine_textLength(self: pointer, ): cint {.importc: "QTextLine_textLength".}
proc fcQTextLine_lineNumber(self: pointer, ): cint {.importc: "QTextLine_lineNumber".}
proc fcQTextLine_draw(self: pointer, p: pointer, point: pointer): void {.importc: "QTextLine_draw".}
proc fcQTextLine_glyphRuns(self: pointer, ): struct_miqt_array {.importc: "QTextLine_glyphRuns".}
proc fcQTextLine_cursorToX2(self: pointer, cursorPos: ptr cint, edge: cint): float64 {.importc: "QTextLine_cursorToX2".}
proc fcQTextLine_cursorToX22(self: pointer, cursorPos: cint, edge: cint): float64 {.importc: "QTextLine_cursorToX22".}
proc fcQTextLine_xToCursor2(self: pointer, x: float64, param2: cint): cint {.importc: "QTextLine_xToCursor2".}
proc fcQTextLine_draw3(self: pointer, p: pointer, point: pointer, selection: pointer): void {.importc: "QTextLine_draw3".}
proc fcQTextLine_glyphRuns1(self: pointer, fromVal: cint): struct_miqt_array {.importc: "QTextLine_glyphRuns1".}
proc fcQTextLine_glyphRuns2(self: pointer, fromVal: cint, length: cint): struct_miqt_array {.importc: "QTextLine_glyphRuns2".}
proc fcQTextLine_delete(self: pointer) {.importc: "QTextLine_delete".}
proc fcQTextLayoutFormatRange_delete(self: pointer) {.importc: "QTextLayout__FormatRange_delete".}


func init*(T: type gen_qtextlayout_types.QTextInlineObject, h: ptr cQTextInlineObject): gen_qtextlayout_types.QTextInlineObject =
  T(h: h)
proc create*(T: type gen_qtextlayout_types.QTextInlineObject, ): gen_qtextlayout_types.QTextInlineObject =
  gen_qtextlayout_types.QTextInlineObject.init(fcQTextInlineObject_new())

proc isValid*(self: gen_qtextlayout_types.QTextInlineObject, ): bool =
  fcQTextInlineObject_isValid(self.h)

proc rect*(self: gen_qtextlayout_types.QTextInlineObject, ): gen_qrect_types.QRectF =
  gen_qrect_types.QRectF(h: fcQTextInlineObject_rect(self.h))

proc width*(self: gen_qtextlayout_types.QTextInlineObject, ): float64 =
  fcQTextInlineObject_width(self.h)

proc ascent*(self: gen_qtextlayout_types.QTextInlineObject, ): float64 =
  fcQTextInlineObject_ascent(self.h)

proc descent*(self: gen_qtextlayout_types.QTextInlineObject, ): float64 =
  fcQTextInlineObject_descent(self.h)

proc height*(self: gen_qtextlayout_types.QTextInlineObject, ): float64 =
  fcQTextInlineObject_height(self.h)
